--- a/src/scss/wf-plugin/index.scss
+++ b/src/scss/wf-plugin/index.scss
@@ -4,6 +4,7 @@
 
 @import "./align.scss";
 @import "./button.scss";
+@import "./card.scss";
 @import "./icon.scss";
 @import "./form.scss";
 @import "./loading.scss";
