--- a/docs/assets/css/wf-plugin.css
+++ b/docs/assets/css/wf-plugin.css
@@ -1344,6 +1344,37 @@ small {
 .card-wrapper .card {
   margin: 10px; }
 
+.carousel {
+  overflow: hidden;
+  position: relative;
+  width: 100%; }
+  .carousel__list {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    transition: 0.3s; }
+  .carousel__item {
+    display: flex;
+    flex-direction: row;
+    position: relative; }
+  .carousel__controller {
+    position: relative;
+    width: 100%; }
+    .carousel__controller .button {
+      border-radius: 50%;
+      margin: 0 5px; }
+    .carousel__controller--over {
+      bottom: 40px;
+      position: absolute; }
+  .carousel__controller-button {
+    border-color: transparent;
+    border-radius: 50%;
+    opacity: 0.5; }
+    .carousel__controller-button--active {
+      opacity: 1; }
+
 .icon--extra-small {
   height: 10px;
   width: 10px; }
