--- a/src/scss/wf-plugin/index.scss
+++ b/src/scss/wf-plugin/index.scss
@@ -5,6 +5,7 @@
 @import "./align.scss";
 @import "./button.scss";
 @import "./card.scss";
+@import "./carousel.scss";
 @import "./icon.scss";
 @import "./form.scss";
 @import "./loading.scss";
