--- a/docs/assets/css/wf-plugin.css
+++ b/docs/assets/css/wf-plugin.css
@@ -1347,7 +1347,8 @@ small {
 .carousel {
   overflow: hidden;
   position: relative;
-  width: 100%; }
+  width: 100%;
+  z-index: 9; }
   .carousel__list {
     display: flex;
     list-style: none;
@@ -1367,7 +1368,8 @@ small {
       margin: 0 5px; }
     .carousel__controller--over {
       bottom: 40px;
-      position: absolute; }
+      position: absolute;
+      z-index: 8; }
   .carousel__controller-button {
     border-color: transparent;
     border-radius: 50%;
