--- a/docs/assets/css/wf-theme.css
+++ b/docs/assets/css/wf-theme.css
@@ -35,24 +35,29 @@
   .grid__header .button-wrapper .button:hover {
     background-color: #0b0e10; }
 
+.grid__carousel .navigation-change {
+  display: none; }
+
 .grid__content .title {
   color: #e77e22;
   font-size: 3rem;
   text-align: center; }
 
-.grid__content .about .flag {
-  margin: 40px auto;
-  display: grid;
-  grid-column-gap: 10px;
-  grid-template-columns: repeat(6, 1fr); }
-  .grid__content .about .flag img {
-    max-width: 100%;
-    height: auto; }
+.grid__content .about {
+  padding: 20px; }
+  .grid__content .about .flag {
+    margin: 40px auto;
+    display: grid;
+    grid-column-gap: 10px;
+    grid-template-columns: repeat(6, 1fr); }
+    .grid__content .about .flag img {
+      max-width: 100%;
+      height: auto; }
 
 .grid__content .service {
   background-color: #b6c2ca;
-  margin-top: 200px;
-  padding: 50px 0; }
+  margin-top: 40px;
+  padding: 50px 20px; }
   .grid__content .service .card-wrapper {
     align-items: flex-start; }
   .grid__content .service .title {
@@ -74,4 +79,10 @@
     height: 150px; }
 
 .grid__content .contact {
-  margin-top: 200px; }
+  margin-top: 40px; }
+
+.grid__footer {
+  color: #ffffff;
+  margin-top: 40px;
+  padding: 20px;
+  text-align: right; }
