--- a/src/scss/wf-theme/theme.scss
+++ b/src/scss/wf-theme/theme.scss
@@ -2,6 +2,10 @@
     font-family: sans-serif;
 }
 
+body {
+    scroll-behavior: smooth;
+}
+
 .grid__header {
     .header {
         align-items: center;
