--- a/src/scss/wf-theme/theme.scss
+++ b/src/scss/wf-theme/theme.scss
@@ -8,8 +8,11 @@ body {
 
 .grid__header {
     .header {
-        align-items: center;
         justify-content: space-between;
+
+        .logo {
+            align-self: flex-start;
+        }
     }
 
     .button {
@@ -18,6 +21,16 @@ body {
     }
 
     .button-wrapper {
+        align-items: flex-end;
+        display: inline-flex;
+        flex-direction: column;
+        padding-right: $big;
+
+        @include tablet {
+            align-items: center;
+            flex-direction: row;
+        }
+
         .button {
             background-color: transparent;
             color: $color-white;
@@ -25,6 +38,34 @@ body {
 
             &:hover {
                 background-color: $color-grey-dark-4;
+            }
+
+            .icon {
+                fill: $color-white;
+            }
+        }
+
+        .toggle-menu {
+            margin: $big 0;
+        }
+
+        .toggle-menu__content {
+            flex-direction: column;
+
+            @include tablet {
+                flex-direction: row;
+            }
+        }
+
+        .toggle-menu__open {
+            align-items: end;
+
+            .button {
+                margin-right: -$big;
+
+                @include tablet {
+                    margin-right: unset;
+                }
             }
         }
     }
@@ -43,8 +84,12 @@ body {
 .grid__content {
     .title {
         color: $color-orange;
-        font-size: 3rem;
+        font-size: 2rem;
         text-align: center;
+
+        @include tablet {
+            font-size: 3rem;
+        }
     }
 
     .about {
@@ -69,40 +114,46 @@ body {
         margin-top: $extra-big;
         padding: 50px $big;
 
-        .card-wrapper {
-            align-items: flex-start;
-        }
-
         .title {
             color: $color-white
         }
 
-        .card {
-            &__header {
-                background-color: $color-grey-light-8;
-                border: 0;
-                border-radius: $border-radius $border-radius 0 0;
-            }
+        .card-wrapper {
+            align-items: flex-start;
 
-            &__body {
-                background-color: $color-white;
-                border: 0;
-                border-radius: 0 0 $border-radius $border-radius;
+            .card {
+                margin: $regular 0;
 
-                p {
-                    text-align: left;
+                @include tablet {
+                    margin: $regular;
+                }
+
+                &__header {
+                    background-color: $color-grey-light-8;
+                    border: 0;
+                    border-radius: $border-radius $border-radius 0 0;
+                }
+
+                &__body {
+                    background-color: $color-white;
+                    border: 0;
+                    border-radius: 0 0 $border-radius $border-radius;
+
+                    p {
+                        text-align: left;
+                    }
+                }
+
+                &__header,
+                &__body {
+                    border-color: $color-grey-light-8;
                 }
             }
 
-            &__header,
-            &__body {
-                border-color: $color-grey-light-8;
+            svg {
+                fill: $color-grey-light-8;
+                height: 150px;
             }
-        }
-
-        svg {
-            fill: $color-grey-light-8;
-            height: 150px;
         }
     }
 
