--- a/src/scss/wf-theme/theme.scss
+++ b/src/scss/wf-theme/theme.scss
@@ -94,12 +94,23 @@ body {
 
     .about {
         padding: $big;
+        padding-bottom: 0;
+
+        .container {
+            max-width: $break-point-tablet-landscape;
+        }
 
         .flag {
             margin: 40px auto;
             display: grid;
-            grid-column-gap: 10px;
-            grid-template-columns: repeat(6, 1fr);
+            grid-row-gap: $regular;
+            grid-column-gap: $regular;
+            grid-template-columns: repeat(3, 1fr);
+
+            @include tablet {
+                grid-row-gap: 0;
+                grid-template-columns: repeat(6, 1fr);
+            }
 
             img {
                 max-width: 100%;
@@ -119,13 +130,22 @@ body {
         }
 
         .card-wrapper {
-            align-items: flex-start;
+            align-items: stretch;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
 
             .card {
+                align-content: stretch;
+                display: flex;
+                flex-direction: column;
+                flex-wrap: nowrap;
+                justify-content: space-evenly;
                 margin: $regular 0;
 
                 @include tablet {
                     margin: $regular;
+                    width: 500px;
                 }
 
                 &__header {
@@ -138,9 +158,18 @@ body {
                     background-color: $color-white;
                     border: 0;
                     border-radius: 0 0 $border-radius $border-radius;
+                    flex: 1;
+
+                    @include tablet {
+                        padding: $big;
+                    }
 
                     p {
                         text-align: left;
+
+                        &:last-child {
+                            margin-bottom: 0;
+                        }
                     }
                 }
 
@@ -151,8 +180,8 @@ body {
             }
 
             svg {
-                fill: $color-grey-light-8;
-                height: 150px;
+                fill: $color-grey-light-10;
+                height: 100px;
             }
         }
     }
