--- a/src/scss/wf-theme/theme.scss
+++ b/src/scss/wf-theme/theme.scss
@@ -202,6 +202,11 @@ body {
             align-items: flex-end;
             display: flex;
         }
+
+        .link-phone {
+            color: $color-text;
+            text-decoration: none;
+        }
     }
 }
 
